--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -10,5 +10,4 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Echo the message
-        run:
-          echo "Hola Mundo!" 
+        run: echo "Hola Mundo!" 
