Add new command for workflow

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,4 +11,9 @@ jobs:
     steps: 
       - name: Echo the message
         run: echo "Hola Mundo!"
+
+      - name: Dime la fecha
+        run: date
+      - run: ls -l
+
         
