--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,6 +16,6 @@ jobs:
         with:
           node-version: 20
       - name: Install dependencias
-        run: npm Install
+        run: npm install
       - name: Lint 
-        run: npm run install 
+        run: npm run eslint
